# sop-pbd

./: .gitignore  CMakeLists.txt  Integration.h  MathUtils.C  MathUtils.cpp  MathUtils.h  PBD.C  PBD.cpp  README.md  SOP_ApplyUpdates.cpp  SOP_ApplyUpdates.h  SOP_CreateAttachmentConstraints.cpp  SOP_CreateAttachmentConstraints.h  SOP_CreateCollisionConstraints.cpp  SOP_CreateCollisionConstraints.h  SOP_CreateConstraints.C  SOP_CreateConstraints.h  SOP_CreateDistanceConstraints.cpp  SOP_CreateDistanceConstraints.h  SOP_CreateRodConstraints.cpp  SOP_IntegrateStep.cpp  SOP_IntegrateStep.h  SOP_Orientation.cpp  SOP_Orientation.h  SOP_ProjectConstraints.C  SOP_ProjectConstraints.cpp  SOP_ProjectConstraints.h  SOP_RodIO.cpp  SOP_RodIO.h  SOP_SolveVelocity.h
docs/: Example_README.md
scripts/: generate_coll.vex  import_files.py
src/: AttachmentConstraint.h  BendTwistConstraint.h  CollisionConstraint.h  Constraint.cpp  Constraint.h  PBD.cpp  SOP_ApplyUpdates.cpp  SOP_CreateAttachmentConstraints.cpp  SOP_CreateCollisionConstraints.h  SOP_CreateDistanceConstraints.cpp  SOP_CreateRodConstraints.cpp  SOP_CreateRodConstraints.h  SOP_IntegrateStep.cpp  SOP_Orientation.cpp  SOP_ProjectConstraints.cpp  SOP_ProjectConstraints.h  SOP_SolveVelocity.cpp  StretchShearConstraint.h
src/Constraints/: AttachmentConstraint.h  BendTwistConstraint.h  Constraint.cpp  Constraint.h  DistanceConstraint.h  StretchShearConstraint.h
src/Utility/: MathUtils.cpp  MathUtils.h
test/: IntGHelpers.h  TestConstants.h  TestHelpers.h  compare_int_g.cpp  test.cpp  xpbd.cpp
